--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -837,7 +837,7 @@
                                                 <input type="radio" name="fbcontent" value="Patient Appointment " class="" id="papptradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="papptradio" class="textc">Poor</label><br>
                                                 <input type="radio" name="fbcontent" value="Report/Letter Delivery " class="" id="repdelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="repdelradio" class="textc">Report/Letter Delivery</label><br>
+                                                <label for="repdelradio" class="textc">Unsatisfactory</label><br>
                                                 <input type="radio" name="fbcontent" value="Report/Letter Turnaround " class="" id="repturnradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="repturnradio" class="textc">Report/Letter Turnaround</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
