--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -839,7 +839,7 @@
                                                 <input type="radio" name="fbcontent" value="Report/Letter Delivery " class="" id="repdelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="repdelradio" class="textc">Unsatisfactory</label><br>
                                                 <input type="radio" name="fbcontent" value="Report/Letter Turnaround " class="" id="repturnradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="repturnradio" class="textc">Report/Letter Turnaround</label><br>
+                                                <label for="repturnradio" class="textc">Satisfactory</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatdiagradio" class="textc">Unsatisfactory Diagnosis</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
