--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -843,7 +843,7 @@
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Diagnosis " class="" id="unsatdiagradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="unsatdiagradio" class="textc">Good</label><br>
                                                 <input type="radio" name="fbcontent" value="Unsatisfactory Communication " class="" id="unsatcommradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="unsatcommradio" class="textc">Unsatisfactory Communication</label>
+                                                <label for="unsatcommradio" class="textc">Excellent</label>
                                             </div>
 
                                             <div class="input-wrapper">
