--- a/main/dfeedback.html
+++ b/main/dfeedback.html
@@ -835,7 +835,7 @@
                                             <p class="mt-3 textc reqstar">Rating of Service</p>
                                             <div>
                                                 <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
-                                                <label for="papptradio" class="textc">Poor</label><br>
+                                                <label for="ratepoorradio" class="textc">Poor</label><br>
                                                 <input type="radio" name="fbcontent" value="Report/Letter Delivery " class="" id="repdelradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="repdelradio" class="textc">Unsatisfactory</label><br>
                                                 <input type="radio" name="fbcontent" value="Report/Letter Turnaround " class="" id="repturnradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
