--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -774,15 +774,15 @@
                                             
                                             <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
                                             <div>
-                                                <input type="radio" name="fbrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="pfbschrating" value="Poor " class="" id="ratepoorradio" data-parsley-multiple="ratelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="ratepoorradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="fbrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbschrating" value="Unsatisfactory " class="" id="rateunsatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateunsatradio" class="textc">Agree</label><br>
-                                                <input type="radio" name="fbrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbschrating" value="Satisfactory " class="" id="ratesatradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="ratesatradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="fbrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbschrating" value="Good " class="" id="rategoodradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rategoodradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="fbrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbschrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="rateexcelradio" class="textc">Strongly Disagree</label>
                                             </div>
 
