--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -782,8 +782,8 @@
                                                 <label for="scheneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbschrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="schedisagradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="pfbschrating" value="Excellent " class="" id="rateexcelradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="rateexcelradio" class="textc">Strongly Disagree</label>
+                                                <input type="radio" name="pfbschrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="ratelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
 
                                             <div class="input-wrapper">
