--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -785,6 +785,20 @@
                                                 <input type="radio" name="pfbschrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
+                                            
+                                            <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
+                                            <div>
+                                                <input type="radio" name="pfbschrating" value="Strongly Agree " class="" id="schestragradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
+                                                <label for="schestragradio" class="textc">Strongly Agree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Agree " class="" id="scheagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="scheagradio" class="textc">Agree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Neutral " class="" id="scheneuradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="scheneuradio" class="textc">Neutral</label><br>
+                                                <input type="radio" name="pfbschrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="schedisagradio" class="textc">Disagree</label><br>
+                                                <input type="radio" name="pfbschrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="rateschelink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
+                                            </div>
 
                                             <div class="input-wrapper">
                                                 <textarea name="notes" title="Notes" id="notes" value="" class="form__input txta" style="overflow: hidden"></textarea>
