--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -786,7 +786,7 @@
                                                 <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Ease of scheduling an appointment</p>
+                                            <p class="mt-3 textc reqstar">Reception staff were helpful and courteous</p>
                                             <div>
                                                 <input type="radio" name="pfbschrating" value="Strongly Agree " class="" id="schestragradio" data-parsley-multiple="rateschelink" data-parsley-error-message="1 selection is required." />
                                                 <label for="schestragradio" class="textc">Strongly Agree</label><br>
