--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -794,8 +794,8 @@
                                                 <label for="staffagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbstaffrating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffneuradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="pfbstaffrating" value="Disagree " class="" id="schedisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="schedisagradio" class="textc">Disagree</label><br>
+                                                <input type="radio" name="pfbstaffrating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="staffdisagradio" class="textc">Disagree</label><br>
                                                 <input type="radio" name="pfbstaffrating" value="Strongly Disagree " class="" id="schestrdisagradio" data-parsley-multiple="ratestafflink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="schestrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
