--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -800,7 +800,7 @@
                                                 <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">Reception staff were helpful and courteous</p>
+                                            <p class="mt-3 textc reqstar">The consultant/technician was professional and answered all my questions regarding the procedure</p>
                                             <div>
                                                 <input type="radio" name="pfbstaffrating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="ratestafflink" data-parsley-error-message="1 selection is required." />
                                                 <label for="staffstragradio" class="textc">Strongly Agree</label><br>
