--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -814,7 +814,7 @@
                                                 <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
                                             
-                                            <p class="mt-3 textc reqstar">The consultant/technician was professional and answered all my questions regarding the procedure</p>
+                                            <p class="mt-3 textc reqstar">Information was provided without any delay</p>
                                             <div>
                                                 <input type="radio" name="pfbprofrating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="rateproflink" data-parsley-error-message="1 selection is required." />
                                                 <label for="staffstragradio" class="textc">Strongly Agree</label><br>
