--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -816,15 +816,15 @@
                                             
                                             <p class="mt-3 textc reqstar">Information was provided without any delay</p>
                                             <div>
-                                                <input type="radio" name="pfbinforating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="rateproflink" data-parsley-error-message="1 selection is required." />
+                                                <input type="radio" name="pfbinforating" value="Strongly Agree " class="" id="staffstragradio" data-parsley-multiple="rateinfolink" data-parsley-error-message="1 selection is required." />
                                                 <label for="staffstragradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="pfbinforating" value="Agree " class="" id="staffagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbinforating" value="Agree " class="" id="staffagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffagradio" class="textc">Agree</label><br>
-                                                <input type="radio" name="pfbinforating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbinforating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffneuradio" class="textc">Neutral</label><br>
-                                                <input type="radio" name="pfbinforating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbinforating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffdisagradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="rateproflink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
 
