--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -818,8 +818,8 @@
                                             <div>
                                                 <input type="radio" name="pfbinforating" value="Strongly Agree " class="" id="infostragradio" data-parsley-multiple="rateinfolink" data-parsley-error-message="1 selection is required." />
                                                 <label for="infostragradio" class="textc">Strongly Agree</label><br>
-                                                <input type="radio" name="pfbinforating" value="Agree " class="" id="staffagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="staffagradio" class="textc">Agree</label><br>
+                                                <input type="radio" name="pfbinforating" value="Agree " class="" id="infoagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="infoagradio" class="textc">Agree</label><br>
                                                 <input type="radio" name="pfbinforating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbinforating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
