--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -820,8 +820,8 @@
                                                 <label for="infostragradio" class="textc">Strongly Agree</label><br>
                                                 <input type="radio" name="pfbinforating" value="Agree " class="" id="infoagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="infoagradio" class="textc">Agree</label><br>
-                                                <input type="radio" name="pfbinforating" value="Neutral " class="" id="staffneuradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="staffneuradio" class="textc">Neutral</label><br>
+                                                <input type="radio" name="pfbinforating" value="Neutral " class="" id="infoneuradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="infoneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbinforating" value="Disagree " class="" id="staffdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="staffdisagradio" class="textc">Disagree</label><br>
                                                 <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
