--- a/main/pfeedback.html
+++ b/main/pfeedback.html
@@ -824,8 +824,8 @@
                                                 <label for="infoneuradio" class="textc">Neutral</label><br>
                                                 <input type="radio" name="pfbinforating" value="Disagree " class="" id="infodisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
                                                 <label for="infodisagradio" class="textc">Disagree</label><br>
-                                                <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="staffstrdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="staffstrdisagradio" class="textc">Strongly Disagree</label>
+                                                <input type="radio" name="pfbinforating" value="Strongly Disagree " class="" id="infofstrdisagradio" data-parsley-multiple="rateinfolink" data-parsley-required data-parsley-error-message="Please choose 1" />
+                                                <label for="infostrdisagradio" class="textc">Strongly Disagree</label>
                                             </div>
 
                                             <div class="input-wrapper">
